  * Fixed Video:isPlaying to always return false after it finishes playing.
  * Fixed RandomGenerator:random crashing if a nil 'self' is used.
  * Fixed loading BMFont files which have characters with 0 width or height (a space character, for example).
  * Fixed love.graphics.newFont causing crashes if FileData is passed in.
  * Fixed a driver bug on some Android devices which caused all objects to show up as black.
  * Fixed a driver bug on Windows with AMD graphics cards where love.graphics.clear would not always work.
  * Fixed Shader:sendColor incorrectly converting alpha values from sRGB to linear RGB when gamma-correct rendering is enabled.
  * Fixed love.graphics.newMesh(vertices) double-converting colors from sRGB to linear RGB when gamma-correct rendering is enabled.
  * Fixed love.graphics.new* crashing when there is no graphics context/window.

  * Updated the Windows executable to prefer the high-powered AMD graphics card on systems which have switchable Intel+AMD GPUs.
  * Updated love.touch.getTouches to return the list of IDs in the relative order that the touches initially happened, instead of being in a random order.
  * Updated the error messages caused by invalid or bad arguments to ImageData and SoundData methods to be more descriptive.


LOVE 0.10.0 [Super Toast]
-------------------------

Released: 2015-12-22

  * Added an iOS port.
  * Added an Android port.
  * Added the flag t.accelerometerjoystick to love.conf. Disables accelerometer-as-joystick functionality on mobile devices when false.
  * Added the flag t.gammacorrect to love.conf (replaces t.window.srgb.) Enabling it globally enables gamma-correct rendering, when supported.
  * Added video playback support for Ogg Theora videos, via love.graphics.newVideo and Video objects.
  * Added love.video module. It is not used for displaying videos on-screen, only decoding them.